# theremin

./: README.md  setup.cfg  theramin_audio.pcm
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: _02_hand_gesture_recognition.py  _03_hand_gesture_recognition_with_video_feedback.py  _04_hand_gesture_w_slabs.py  _05_a_wrist_lines.py  _05_b_wrist_lines.py  _06_hand_gesture_w_slabs.py  _07_wrist_lines_w_sound.py  _08_keyboard_theramin.py  _09_pythonista_example.py  _10_aubio_example.py  _10_essentia_example.py  _11_wrist_lines_w_pyo.py  _12_wrist_lines_w_pyo.py  _13_wrist_lines_w_pyo.py  _14_high_sines_theremin.py  _15_natural_instrument_theremin.py  last_theramin_log.jsonl  old_07_wrist_lines_w_sound.py  realtime_midi.mid  theramin_audio.pcm  theramin_wip.ipynb
theramin/: __init__.py  audio.py  display.py  hand_features.py  main.py  script_utils.py  util.py  video_features.py
theremin/: audio.py  display.py  main.py  script_utils.py  util.py
theremin/scrap/: old_main.py
