[metadata]
name = theremin
version = 0.0.5
url = https://github.com/thorwhalen/theremin
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = A video-to-sound theremin
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = theremin

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    dol
    i2
    cw

[options.entry_points]
console_scripts =
    theremin = theremin.main:dispatched_theremin_cli